lakehouse/staging/nessie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nessie
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: nessie.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nessie
                port:
                  number: 80
